--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
     "dev-mockdata": "cross-env VITE_API_SERVICE_TYPE=MOCK npm run dev",
-    "build": "tsc -b && vite build --outDir ../Lighthouse/wwwroot/NewFrontend",
+    "build": "tsc -b && vite build --outDir ../Lighthouse/wwwroot",
     "build-docker": "tsc -b && vite build --outDir ./dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
