--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,10 @@ jobs:
       run: npm run build
       working-directory: ./Lighthouse.Frontend
 
+    - name: Test Frontend
+      run: npm test
+      working-directory: ./Lighthouse.Frontend
+
     - name: Frontend SonarCloud
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
