--- a/Lighthouse.Frontend/tsconfig.app.json
+++ b/Lighthouse.Frontend/tsconfig.app.json
@@ -7,6 +7,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types":[
+      "vitest/globals"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -23,5 +26,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "setupTests.ts"]
 }
