Try to make sonar and docker work again with new names

--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,4 @@ FodyWeavers.xsd
 *.db-wal
 /Lighthouse.Backend/wwwroot/assets/*
 Lighthouse.Frontend/sonar-report.xml
+Lighthouse.Frontend/coverage/*
