--- a/Lighthouse.Frontend/sonar-project.properties
+++ b/Lighthouse.Frontend/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.sources=src
 sonar.exclusions=**/*.test.ts, **/*.test.tsx, **/__tests__/**
 
 sonar.testExecutionReportPaths=sonar-report.xml
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Language specific options
 sonar.language=typescript
