--- a/Lighthouse.Backend/Dockerfile
+++ b/Lighthouse.Backend/Dockerfile
@@ -10,7 +10,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Lighthouse.Backend/Lighthouse.Backend.csproj", "Lighthouse/"]
-RUN dotnet restore "./Lighthouse.Backend/./Lighthouse.Backend.csproj"
+RUN dotnet restore "./Lighthouse/Lighthouse.Backend.csproj"
 COPY . .
 WORKDIR "/src/Lighthouse"
 RUN dotnet build "./Lighthouse.Backend.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
