--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,11 +78,11 @@ jobs:
         
   docker:
     runs-on: ubuntu-latest
-    needs:
-    - backend
-    - frontend
+    #needs:
+    #- backend
+    #- frontend
 
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
 
     permissions: write-all
 
