--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,10 @@ jobs:
   
   release:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs:
+    - deploy
+    - docker
+
     if: github.ref == 'refs/heads/main'   
 
     environment:
