--- a/Lighthouse.Backend/Lighthouse.Backend.csproj
+++ b/Lighthouse.Backend/Lighthouse.Backend.csproj
@@ -31,7 +31,7 @@
 
 	<ItemGroup>
 		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-			<_Parameter1>Lighthouse.Tests</_Parameter1>
+			<_Parameter1>Lighthouse.Backend.Tests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
 
