--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,10 @@ jobs:
       run: npm test
       working-directory: ./Lighthouse.Frontend
 
+    - name: Generate Sonar Files
+      run: npm run sonarreport
+      working-directory: ./Lighthouse.Frontend
+
     - name: Frontend SonarCloud
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
