--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,4 @@ FodyWeavers.xsd
 /Lighthouse.Backend/wwwroot/assets/*
 Lighthouse.Frontend/sonar-report.xml
 Lighthouse.Frontend/coverage/*
+/Lighthouse.Backend/wwwroot/index.html
