--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
-    "dev-mockdata": "cross-env VITE_API_SERVICE_TYPE=MOCK npm run dev",
+    "dev-mockdata": "cross-env VITE_API_SERVICE_TYPE=MOCK VITE_API_SERVICE_DELAY=TRUE npm run dev",
     "build": "tsc -b && vite build --outDir ../Lighthouse.Backend/wwwroot",
     "build-docker": "tsc -b && vite build --outDir ./dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
