--- a/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
+++ b/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
@@ -30,5 +30,9 @@
 	  <ProjectReference Include="..\Lighthouse.Backend\Lighthouse.Backend.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="API\DTO\" />
+	</ItemGroup>
+
 
 </Project>
