--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
+    "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.1",
     "@mui/x-charts": "^7.10.0",
     "@mui/x-date-pickers": "^7.10.0",
