Add encryption of secret options for WorkTrackingSystemConnection
Also don't send the values to the frontend that are secret

--- a/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/appsettings.json
@@ -54,5 +54,8 @@
       "RefreshAfter": 120,
       "StartDelay": 3
     }
+  },
+  "EncryptionSettings": {
+    "EncryptionKey": "uH2VbF5hOW0/huLOH1Q2L0g+P3J9dG43cknQK7t9R5M="
   }
 }
