--- a/Lighthouse.Backend/Lighthouse.Backend.csproj
+++ b/Lighthouse.Backend/Lighthouse.Backend.csproj
@@ -7,6 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<SelfContained>true</SelfContained>
     	<UseAppHost>true</UseAppHost>
+		<AssemblyName>Lighthouse</AssemblyName>
 		<PublishSingleFile>true</PublishSingleFile>
 		<UserSecretsId>d41c4b41-bba9-4819-950c-78f93d0e54ba</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
