Publish proper osx and linux versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,11 +153,11 @@ jobs:
         working-directory: ./Lighthouse.Backend
 
       - name: publish osx-x64
-        run: dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -o ./publish/osx-x64
+        run: dotnet publish -c Release -r osx-x64 --self-contained -p:PublishSingleFile=true -o ./publish/osx-x64
         working-directory: ./Lighthouse.Backend
 
       - name: publish linux-x64
-        run: dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -o ./publish/linux-x64
+        run: dotnet publish -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -o ./publish/linux-x64
         working-directory: ./Lighthouse.Backend
 
       - name: Upload artifact for deployment job
