Add proper working-directory for making executable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -158,6 +158,7 @@ jobs:
 
       - name: Set osx executable permission
         run: chmod +x ./publish/osx-x64/Lighthouse
+        working-directory: ./Lighthouse.Backend
 
       - name: publish linux-x64
         run: dotnet publish -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -o ./publish/linux-x64
@@ -165,6 +166,7 @@ jobs:
 
       - name: Set linux executable permission
         run: chmod +x ./publish/linux-x64/Lighthouse
+        working-directory: ./Lighthouse.Backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
