Dynamically adjust milestones as part of Project Detail View

--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -24,6 +24,7 @@
     "@mui/x-date-pickers": "^7.10.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "lodash.debounce": "^4.0.8",
     "lorem-ipsum": "^2.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -34,6 +35,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
