--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -28,7 +28,9 @@
     "lorem-ipsum": "^2.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.1.0",
