--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,13 +80,30 @@ jobs:
         npm install -g sonarqube-scanner
         sonar-scanner
         
-  docker:
+  tag:
     runs-on: ubuntu-latest
     needs:
-    - backend
-    - frontend
+      - backend
+      - frontend
 
     if: github.ref == 'refs/heads/main'
+    permissions: write-all
+
+    steps:      
+      - name: Create tag if necessary
+        id: version
+        uses: fregante/daily-version-action@v2
+        with:
+          prefix: v
+    
+      
+    outputs:
+      created: ${{ steps.version.outputs.created }}
+      version: ${{ steps.version.outputs.version }}
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: tag
 
     permissions: write-all
 
@@ -95,19 +112,21 @@ jobs:
         with:
           fetch-depth: '0'
 
+      - name: Update AppSettings
+        uses: ./.github/actions/update-appsettings
+        with:
+          app_version: ${{ needs.tag.outputs.version }}
+
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master        
         with:
           image_name: ${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Lighthouse.Backend/Dockerfile
-        
+          dockerfile: Lighthouse.Backend/Dockerfile        
 
   deploy:
     runs-on: ubuntu-latest
-    needs:
-    - backend
-    - frontend
+    needs: tag
 
     if: github.ref == 'refs/heads/main'   
 
@@ -138,15 +157,10 @@ jobs:
         run: npm run build
         working-directory: ./Lighthouse.Frontend
 
-      - name: Create tag if necessary
-        id: version
-        uses: fregante/daily-version-action@v2
+      - name: Update AppSettings
+        uses: ./.github/actions/update-appsettings
         with:
-          prefix: v
-
-      - name: Update appsettings.json
-        run: jq '.LighthouseVersion = env.DAILY_VERSION' appsettings.json > temp.json && mv temp.json appsettings.json
-        working-directory: ./Lighthouse.Backend
+          app_version: ${{ needs.tag.outputs.version }}
 
       - name: publish win-x64
         run: dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -o ./publish/win-x64
@@ -180,9 +194,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse ${{ env.DAILY_VERSION }}
+          name: Lighthouse ${{ needs.tag.outputs.version }}
           path: ./Lighthouse.Backend/publish
-
 
       - name: publish app-service
         run: dotnet publish -c Release /p:UseAppHost=false -p:PublishSingleFile=false --no-self-contained -o ./publish/app-service
@@ -202,14 +215,11 @@ jobs:
           app-name: 'LighthouseCloudDemo'  
           slot-name: 'production'  
           package: ./Lighthouse.Backend/publish/app-service
-      
-    outputs:
-      created: ${{ steps.version.outputs.created }}
-      version: ${{ steps.version.outputs.version }}
   
   release:
     runs-on: ubuntu-latest
     needs:
+    - tag
     - deploy
     - docker
 
@@ -225,37 +235,42 @@ jobs:
         with:
           fetch-depth: '0'
 
+      - name: Update AppSettings
+        uses: ./.github/actions/update-appsettings
+        with:
+          app_version: ${{ needs.tag.outputs.version }}
+
       - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@master        
         with:
           image_name: ${{ github.repository }} 
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: Lighthouse.Backend/Dockerfile
-          image_tag: ${{ needs.deploy.outputs.version }}
+          image_tag: ${{ needs.tag.outputs.version }}
 
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse ${{ needs.deploy.outputs.version }}
+          name: Lighthouse ${{ needs.tag.outputs.version }}
           path: LighthouseArtifacts
 
       - uses: vimtor/action-zip@v1.2
         with:
           files: LighthouseArtifacts/win-x64
-          dest: Lighthouse_${{ needs.deploy.outputs.version }}_win-x64.zip
+          dest: Lighthouse_${{ needs.tag.outputs.version }}_win-x64.zip
 
       - uses: vimtor/action-zip@v1.2
         with:
           files: LighthouseArtifacts/osx-x64
-          dest: Lighthouse_${{ needs.deploy.outputs.version }}_osx-x64.zip
+          dest: Lighthouse_${{ needs.tag.outputs.version }}_osx-x64.zip
 
       - uses: vimtor/action-zip@v1.2
         with:
           files: LighthouseArtifacts/linux-x64
-          dest: Lighthouse_${{ needs.deploy.outputs.version }}_linux-x64.zip
+          dest: Lighthouse_${{ needs.tag.outputs.version }}_linux-x64.zip
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse_${{ needs.deploy.outputs.version }}_win-x64.zip,Lighthouse_${{ needs.deploy.outputs.version }}_osx-x64.zip, Lighthouse_${{ needs.deploy.outputs.version }}_linux-x64.zip"
-          tag: ${{ needs.deploy.outputs.version }}
+          artifacts: "Lighthouse_${{ needs.tag.outputs.version }}_win-x64.zip,Lighthouse_${{ needs.tag.outputs.version }}_osx-x64.zip, Lighthouse_${{ needs.tag.outputs.version }}_linux-x64.zip"
+          tag: ${{ needs.tag.outputs.version }}
           prerelease: true
-          name: "Lighthouse ${{ needs.deploy.outputs.version }}"
+          name: "Lighthouse ${{ needs.tag.outputs.version }}"
