--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -23,6 +23,8 @@
     "@mui/material": "^5.16.7",
     "@mui/x-charts": "^7.13.0",
     "@mui/x-date-pickers": "^7.13.0",
+    "@syncfusion/ej2-base": "^27.1.50",
+    "@syncfusion/ej2-react-charts": "^27.1.50",
     "axios": "^1.7.4",
     "dayjs": "^1.11.12",
     "lodash.debounce": "^4.0.8",
