--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: tag
 
-    if: github.ref == 'refs/heads/main'   
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
     environment:
       name: 'Production'
@@ -254,7 +254,7 @@ jobs:
     - deploy
     - docker
 
-    if: github.ref == 'refs/heads/main'   
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
     environment:
       name: Release
