--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,14 +79,37 @@ jobs:
       run: |
         npm install -g sonarqube-scanner
         sonar-scanner
-        
+
+  buildE2Etests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+
+    - name: Install npm dependencies
+      run: npm install
+      working-directory: ./Lighthouse.EndToEndTests
+
+    - name: Lint Frontend
+      run: npm run lint
+      working-directory: ./Lighthouse.EndToEndTests
+
+    - name: Build Frontend
+      run: npm run build
+      working-directory: ./Lighthouse.EndToEndTests
+
   tag:
     runs-on: ubuntu-latest
     needs:
       - backend
       - frontend
+      - buildE2Etests
 
-    if: github.ref == 'refs/heads/main'
     permissions: write-all
 
     steps:          
@@ -117,41 +140,13 @@ jobs:
       version: ${{ steps.version.outputs.version }}
       fileversion: ${{ steps.process_version.outputs.fileversion }}
 
-  docker:
+  packageapp:
     runs-on: ubuntu-latest
     needs: tag
 
     permissions: write-all
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
-
-      - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: macbre/push-to-ghcr@master        
-        with:
-          image_name: ${{ github.repository }} 
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          build_arg: VERSION=${{ needs.tag.outputs.fileversion }}
-          dockerfile: Lighthouse.Backend/Dockerfile        
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: tag
-
-    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
-
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    permissions:
-      contents: write
-      id-token: write
-
-    steps:
-
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
@@ -202,7 +197,114 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Lighthouse ${{ needs.tag.outputs.version }}
-          path: ./Lighthouse.Backend/publish
+          path: ./Lighthouse.Backend/publish      
+
+  runE2ETests:
+    runs-on: ubuntu-latest
+    needs:
+      - packageapp
+      - tag
+
+    permissions: write-all
+
+    steps:
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse ${{ needs.tag.outputs.version }}
+          path: LighthouseArtifacts          
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./Lighthouse.EndToEndTests
+
+      - name: Start Lighthouse Server
+        run: |
+          chmod +x ./LighthouseArtifacts/linux-x64/lighthouse
+          ./LighthouseArtifacts/linux-x64/lighthouse &
+          echo "Waiting for server to be ready..."
+          # Wait for server to respond (timeout after 30s)
+          timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
+          echo "Server is ready!"
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+        working-directory: ./Lighthouse.EndToEndTests
+
+      - name: Run Playwright tests
+        run: npx playwright test
+        working-directory: ./Lighthouse.EndToEndTests
+        env:
+          LIGHTHOUSEURLNAME: 'http://localhost:5000'
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+  docker:
+    runs-on: ubuntu-latest
+    needs:
+      - tag
+      - runE2ETests
+
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+
+    permissions: write-all
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      - name: Build and publish a Docker image for ${{ github.repository }}
+        uses: macbre/push-to-ghcr@master        
+        with:
+          image_name: ${{ github.repository }} 
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          build_arg: VERSION=${{ needs.tag.outputs.fileversion }}
+          dockerfile: Lighthouse.Backend/Dockerfile        
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - tag
+      - runE2ETests
+
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    permissions:
+      contents: write
+      id-token: write
+
+    steps:
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{env.DOTNET_ROOT}}
+
+      - name: Install npm dependencies
+        run: npm install
+        working-directory: ./Lighthouse.Frontend
+
+      - name: Build Frontend
+        run: npm run build
+        working-directory: ./Lighthouse.Frontend
 
       - name: publish app-service
         run: dotnet publish -c Release /p:UseAppHost=false -p:PublishSingleFile=false --no-self-contained -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/app-service
@@ -246,7 +348,6 @@ jobs:
           slot-name: 'production'  
           package: ./Lighthouse.Backend/publish/app-service-demo
       
-  
   release:
     runs-on: ubuntu-latest
     needs:
