Move playwright into specific composite action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,7 +201,7 @@ jobs:
           echo "Server is ready!"
         working-directory: ./Lighthouse.Backend
 
-      - uses: ./.github/workflows/playwright-tests.yml
+      - uses: ./.github/actions/playwright
         with:
           base-url: 'http://localhost:5000'
 
