--- a/.github/actions/playwright/action.yml
+++ b/.github/actions/playwright/action.yml
@@ -19,14 +19,17 @@ runs:
         
     - name: Install dependencies
       run: npm ci
+      shell: bash
       working-directory: ./Lighthouse.EndToEndTests
 
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      shell: bash
       working-directory: ./Lighthouse.EndToEndTests
 
     - name: Run Playwright tests
       run: npx playwright test
+      shell: bash
       working-directory: ./Lighthouse.EndToEndTests
       env:
         LIGHTHOUSEURLNAME: ${{ inputs.base-url }}
