Add correct env var for setting base-url in playwright

--- a/.github/actions/playwright/action.yml
+++ b/.github/actions/playwright/action.yml
@@ -32,7 +32,7 @@ runs:
       shell: bash
       working-directory: ./Lighthouse.EndToEndTests
       env:
-        LIGHTHOUSEURLNAME: ${{ inputs.base-url }}
+        LIGHTHOUSEURL: ${{ inputs.base-url }}
 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
